--- a/argocd/config/application-01-development.yaml
+++ b/argocd/config/application-01-development.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: layers
+  name: layers-app
   namespace: argocd
 spec:
-  project: layers-for-argo
+  project: default
   source:
     repoURL: https://github.com/marrober/layers-deployment.git
     targetRevision: HEAD
     path: application
   destination:
     server: https://kubernetes.default.svc
-    namespace: layers-argo
+    namespace: layers-argo-dev
