--- a/application/application-route.yaml
+++ b/application/application-route.yaml
@@ -2,6 +2,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: layers-route
+  namespace: layers
   labels:
     app: layers-app
 spec:
