--- a/application/application-deployment.yaml
+++ b/application/application-deployment.yaml
@@ -2,35 +2,29 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: layer1
+    app: liberty-rest
     version: v1
-    app.kubernetes.io/part-of: layers
-    app.openshift.io/runtime: nodejs
-  name: layer1-v1
-  namespace: layers
+    app.kubernetes.io/part-of: liberty-rest
+  name: liberty-rest
+  namespace: liberty-rest-dev
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: layer1
+      app: liberty-rest
       version: v1
   template:
     metadata:
       labels:
-        app: layer1
+        app: liberty-rest
         version: v1
     spec:
       containers:
       - env:
-        image: quay.io/marrober/layers:latest
+        image: quay.io/marrober/liberty-rest:latest
         imagePullPolicy: Always
-        name: layer1
+        name: liberty-rest
         ports:
         - containerPort: 8080
           name: http
           protocol: TCP
-        env:
-          - name: THIS_LAYER_NAME
-            value: layer1
-          - name: VERSION_ID
-            value: v1
