Update channel.yaml, config_placement_rule.yaml, and 12 more files...

--- a/acm/policies/limit-range/configuration/limitrange-policy.yaml
+++ b/acm/policies/limit-range/configuration/limitrange-policy.yaml
@@ -1,7 +1,7 @@
 apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
-  name: policy-limitmemory
+  name: policy-limitrange
   namespace: rhacm-policies
 spec:
   remediationAction: enforce
