--- a/acm/policies/limit-range/subscription/kustomization.yaml
+++ b/acm/policies/limit-range/subscription/kustomization.yaml
@@ -2,8 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 bases:
-- ../common
+- ../../common
 
 resources:
-- config_limitrange.yaml
-- config_placement_binding.yaml
+- subscription.yaml
