--- a/acm/policies/common/channel.yaml
+++ b/acm/policies/common/channel.yaml
@@ -2,6 +2,8 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: Channel
 metadata:
   name: policy-channel
+  labels:
+    policy: limit-range
 spec:
   type: GitHub
   pathname: https://github.com/marrober/layers-deployment.git
