--- a/acm/policies/limit-range/configuration/kustomization.yaml
+++ b/acm/policies/limit-range/configuration/kustomization.yaml
@@ -1,10 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
-bases:
-- ../../common
-
 resources:
 - limitrange-policy.yaml
-- limitrange_placement_binding.yaml
+- limitrange-placement-binding.yaml
 - placement-rule.yaml
+patches:
+- patch: |-
+    - op: add
+      path: /metadata/namespace
+      value: rhacm-policies
+  target:
+    labelSelector: "policy=limit-range"
