--- a/acm/policies/limit-range/configuration/placement-rule.yaml
+++ b/acm/policies/limit-range/configuration/placement-rule.yaml
@@ -2,6 +2,8 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
   name: dev-clusters
+  labels:
+    policy: limit-range
 spec:
   clusterConditions:
   - type: ManagedClusterConditionAvailable
