--- a/acm/policies/limit-range/subscription/kustomization.yaml
+++ b/acm/policies/limit-range/subscription/kustomization.yaml
@@ -1,8 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
 bases:
 - ../../common
-
 resources:
 - subscription.yaml
+patches:
+- patch: |-
+    - op: add
+      path: /metadata/namespace
+      value: rhacm-policies
+  target:
+    labelSelector: "policy=limit-range"
