--- a/application/application-deployment.yaml
+++ b/application/application-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         version: v1
     spec:
       containers:
-        image: quay.io/marrober/layers:10
+      - image: quay.io/marrober/layers:10
         imagePullPolicy: Always
         name: layer1
         ports:
