--- a/acm/policies/common/kustomization.yaml
+++ b/acm/policies/common/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - namespace.yaml
-- channel.yaml
+- placement-rule.yaml
 patches:
 - patch: |-
     - op: add
