--- a/acm/policies/limit-range/kustomization.yaml
+++ b/acm/policies/limit-range/kustomization.yaml
@@ -1,10 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+bases:
+- ../common
 resources:
 - limitrange-policy.yaml
 - limitrange-placement-binding.yaml
-- placement-rule.yaml
-- subscription.yaml
 patches:
 - patch: |-
     - op: add
