--- a/acm/management/subscription.yaml
+++ b/acm/management/subscription.yaml
@@ -7,6 +7,8 @@ metadata:
     app: layers-app
   annotations:
     apps.open-cluster-management.io/github-path: application
+    apps.open-cluster-management.io/reconcile-option: replace
+    apps.open-cluster-management.io/reconcile-rate: high
 spec:
   channel: layers/layers-app-latest
   placement:
