--- a/acm/policies/limit-range/kustomization.yaml
+++ b/acm/policies/limit-range/kustomization.yaml
@@ -1,5 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
+bases:
+- ../common
+
 resources:
 - limitrange-policy.yaml
 - limitrange-placement-binding.yaml
