--- a/acm/management/placement-rule.yaml
+++ b/acm/management/placement-rule.yaml
@@ -4,6 +4,7 @@ metadata:
   name: dev-clusters
   namespace: layers
 spec:
+  clusterReplicas: 1
   clusterConditions:
     - type: ManagedClusterConditionAvailable
       status: "True"
