--- a/application/application-route.yaml
+++ b/application/application-route.yaml
@@ -2,7 +2,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: layers-route
-  namespace: layers
+  namespace: layers-app
   labels:
     app: layers-app
 spec:
