--- a/application/application-service.yaml
+++ b/application/application-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: layer1
-  namespace: layers
+  namespace: layers-app
   labels:
     app: layer1
 spec:
