adding lab-name

--- a/acm/policies/CA-Security-Assessment-and-Authorization/policy-compliance-operator-install.yaml
+++ b/acm/policies/CA-Security-Assessment-and-Authorization/policy-compliance-operator-install.yaml
@@ -115,5 +115,5 @@ spec:
   clusterSelector:
     matchExpressions:
       - {key: vendor, operator: In, values: ["OpenShift"]}
-      - {key: nodes, operator: In, values: ["multi"]}
+      - {key: lab-name, operator: In, values: ["mr"]}
 
