--- a/acm/policies/CA-Security-Assessment-and-Authorization/policy-compliance-operator-install.yaml
+++ b/acm/policies/CA-Security-Assessment-and-Authorization/policy-compliance-operator-install.yaml
@@ -114,6 +114,5 @@ spec:
       type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - {key: vendor, operator: In, values: ["OpenShift"]}
-      - {key: lab-name, operator: In, values: ["mr"]}
+      - {key: environment, operator: In, values: ["dev"]}
 
