--- a/acm/policies/limit-range/limitrange-policy.yaml
+++ b/acm/policies/limit-range/limitrange-policy.yaml
@@ -15,6 +15,7 @@ spec:
           name: policy-limitrange
         spec:
           severity: medium
+          remediationAction: enforce
           namespaceSelector:
             exclude:
             - kube-*
