--- a/acm/policies/limit-range/kustomization.yaml
+++ b/acm/policies/limit-range/kustomization.yaml
@@ -7,6 +7,7 @@ bases:
 resources:
 - limitrange-policy.yaml
 - limitrange-placement-binding.yaml
+- placement-rule.yaml
 - subscription.yaml
 patches:
 - patch: |-
