--- a/acm/policies/service-account-ownership/sa-ownership-placement-rule.yaml
+++ b/acm/policies/service-account-ownership/sa-ownership-placement-rule.yaml
@@ -3,7 +3,7 @@ kind: PlacementRule
 metadata:
   name: dev-clusters
   labels:
-    policy: must-gather
+    policy: sa-ownership
 spec:
   clusterConditions:
   - type: ManagedClusterConditionAvailable
