--- a/acm/policies/web-terminal/placement-rule.yaml
+++ b/acm/policies/web-terminal/placement-rule.yaml
@@ -2,6 +2,8 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
   name: openshift-clusters
+  labels:
+    policy: web-terminal
 spec:
   clusterConditions:
   - type: ManagedClusterConditionAvailable
