--- a/acm/policies/limit-range/placement-rule.yaml
+++ b/acm/policies/limit-range/placement-rule.yaml
@@ -10,7 +10,7 @@ spec:
     status: "True"
   clusterSelector:
     matchExpressions:
-      - key: all-clusters
+      - key: environment
         operator: In
         values:
-        - "true"
+        - "dev"
