--- a/acm/policies/selector-test/Dockerfile
+++ b/acm/policies/selector-test/Dockerfile
@@ -2,8 +2,12 @@ FROM default-route-openshift-image-registry.apps.cluster-2q9gc.2q9gc.sandbox2848
 USER 0
 RUN chmod a+w /var/log
 RUN dnf install -y java
-COPY groovy-4.0.26.jar /opt
-COPY groovy-json-4.0.26.jar /opt
+COPY groovy/groovy /opt
+COPY groovy/startGroovy /opt
+#COPY groovy-4.0.26.jar /opt
+RUN mkdir /opt/temp
+COPY temp/pod-data.json /opt/temp
+COPY groovy/groovy-json-4.0.26.jar /opt
 copy config-map-generator.groovy /opt
 RUN ls -al /opt
 USER 1001
