--- a/acm/policies/selector-test/acm/generate-cm-policy/placement.yaml
+++ b/acm/policies/selector-test/acm/generate-cm-policy/placement.yaml
@@ -1,7 +1,7 @@
 apiVersion: cluster.open-cluster-management.io/v1beta1
 kind: Placement
 metadata:
-  name: test-placement
+  name: dev-clusters
   namespace: rhacm-policies
 spec:
   clusterSets:
