Update the gatekeeper config and apply to all OCP clusters

--- a/acm/gatekeeper/gatekeeper-config-policy-binding.yaml
+++ b/acm/gatekeeper/gatekeeper-config-policy-binding.yaml
@@ -1,12 +1,12 @@
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
-  name: binding-policy-gatekeeper-config-exclude-namespaces
+  name: gatekeeper-config
 placementRef:
-  name: dev-clusters
+  name: all-openshift-clusters
   kind: PlacementRule
   apiGroup: apps.open-cluster-management.io
 subjects:
-- name: policy-gatekeeper-config-exclude-namespaces
+- name: gatekeeper-config
   kind: Policy
   apiGroup: policy.open-cluster-management.io
