--- a/acm/gatekeeper/gatekeeper-config-policy.yaml
+++ b/acm/gatekeeper/gatekeeper-config-policy.yaml
@@ -3,7 +3,7 @@
 apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
-  name: policy-gatekeeper-config-exclude-namespaces
+  name: gatekeeper-config
   annotations:
     policy.open-cluster-management.io/standards: NIST SP 800-53
     policy.open-cluster-management.io/categories: CM Configuration Management
@@ -16,30 +16,34 @@ spec:
         apiVersion: policy.open-cluster-management.io/v1
         kind: ConfigurationPolicy
         metadata:
-          name: policy-gatekeeper-config-exclude-namespaces
+          name: gatekeeper-config
         spec:
           remediationAction: enforce # will be overridden by remediationAction in parent policy
           severity: low
           object-templates:
             - complianceType: mustonlyhave
               objectDefinition:
-                apiVersion: config.gatekeeper.sh/v1alpha1
-                kind: Config
+                apiVersion: operator.gatekeeper.sh/v1alpha1
+                kind: Gatekeeper
                 metadata:
-                  name: config
+                  name: gatekeeper
                   namespace: openshift-gatekeeper-system
                 spec:
-                  match:
-                    - excludedNamespaces:
-                        - ansible-automation-platform
-                        - hive
-                        - kube-*
-                        - local-quay
-                        - multicluster-engine
-                        - open-cluster-management
-                        - open-cluster-management-*
-                        - openshift-*
-                        - rhacs-operator
-                        - stackrox
-                      processes:
-                        - '*'
+                  config:
+                    matches:
+                      - excludedNamespaces:
+                          - open-cluster-management
+                          - kube-*
+                          - openshift-*
+                          - openshift
+                          - klusterlet-*
+                          - hypershift
+                          - open-*
+                          - hive
+                          - local-*
+                          - multicluster-*
+                          - rhacs-*
+                          - stackrox
+                        processes:
+                          - '*'
+                  validatingWebhook: Enabled
