--- a/acm/policies/Advanced-Cluster-Security/kustomization.yml
+++ b/acm/policies/Advanced-Cluster-Security/kustomization.yml
@@ -1,4 +1,8 @@
 generators:
 - ./policyGenerator.yaml
-commonLabels:
-  open-cluster-management.io/policy-set: openshift-plus
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+labels:
+- includeSelectors: true
+  pairs:
+    open-cluster-management.io/policy-set: openshift-plus
