--- a/acm/policies/pipelines-install-acm/pipelines-policy.yaml
+++ b/acm/policies/pipelines-install-acm/pipelines-policy.yaml
@@ -25,11 +25,10 @@ spec:
             kind: Subscription
             metadata:
               name: openshift-pipelines-operator
-              namespace: openshift-pipelines
+              namespace: openshift-operators
             spec:
               channel: latest
               installPlanApproval: Automatic
               name: openshift-pipelines-operator-rh
               source: redhat-operators
               sourceNamespace: openshift-marketplace
-              startingCSV: openshift-pipelines-operator-rh.v1.19.3
