--- a/acm/policies/gitops/gitops-policy.yaml
+++ b/acm/policies/gitops/gitops-policy.yaml
@@ -15,21 +15,14 @@ spec:
         object-templates:
         - complianceType: musthave
           objectDefinition:
-            apiVersion: v1
-            kind: Namespace
-            metadata:
-              name: openshift-gitops-operator
-        - complianceType: musthave
-          objectDefinition:
             apiVersion: operators.coreos.com/v1alpha1
             kind: Subscription
             metadata:
               name: openshift-gitops-operator
-              namespace: openshift-gitops-operator
+              namespace: openshift-operators
             spec:
               channel: latest
               installPlanApproval: Automatic
               name: openshift-gitops-operator
               source: redhat-operators
               sourceNamespace: openshift-marketplace
-              startingCSV: openshift-gitops-operator.v1.17.0
