--- a/acm/gatekeeper/gatekeeper-config-policy-binding.yaml
+++ b/acm/gatekeeper/gatekeeper-config-policy-binding.yaml
@@ -3,7 +3,7 @@ kind: PlacementBinding
 metadata:
   name: binding-policy-gatekeeper-config-exclude-namespaces
 placementRef:
-  name: dev-clusters
+  name: local-cluster
   kind: PlacementRule
   apiGroup: apps.open-cluster-management.io
 subjects:
