--- a/acm/gatekeeper/gatekeeper-config-policy-placement-rule.yaml
+++ b/acm/gatekeeper/gatekeeper-config-policy-placement-rule.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
-  name: dev-clusters
+  name: local-cluster
   labels:
     policy: default-sa
 spec:
@@ -10,7 +10,7 @@ spec:
     status: "True"
   clusterSelector:
     matchExpressions:
-      - key: environment
+      - key: local-cluster
         operator: In
         values:
-        - "dev"
+        - "true"
