--- a/acm/gatekeeper/gatekeeper-config-policy-binding.yaml
+++ b/acm/gatekeeper/gatekeeper-config-policy-binding.yaml
@@ -1,9 +1,22 @@
+#apiVersion: policy.open-cluster-management.io/v1
+#kind: PlacementBinding
+#metadata:
+#  name: gatekeeper-policy
+#placementRef:
+#  name: hub-cluster
+#  kind: PlacementRule
+#  apiGroup: apps.open-cluster-management.io
+#subjects:
+#- name: gatekeeper-policy
+#  kind: Policy
+#  apiGroup: policy.open-cluster-management.io
+#---
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
   name: gatekeeper-config
 placementRef:
-  name: local-cluster
+  name: hub-cluster
   kind: PlacementRule
   apiGroup: apps.open-cluster-management.io
 subjects:
