--- a/acm/gatekeeper/gatekeeper-config-policy.yaml
+++ b/acm/gatekeeper/gatekeeper-config-policy.yaml
@@ -1,13 +1,36 @@
-# Sample policy to configure gatekeeper to exclude namespaces from certain processes for all constraints in the cluster
-# See: https://github.com/open-policy-agent/gatekeeper/tree/release-3.3#exempting-namespaces-from-gatekeeper
+#apiVersion: policy.open-cluster-management.io/v1
+#kind: Policy
+#metadata:
+#  name: gatekeeper-policy
+#spec:
+#  remediationAction: enforce
+#  disabled: false
+#  policy-templates:
+#    - objectDefinition:
+#        apiVersion: policy.open-cluster-management.io/v1
+#        kind: ConfigurationPolicy
+#        metadata:
+#          name: gatekeeper-operator
+#        spec:
+#          object-templates:
+#            - complianceType: mustonlyhave
+#              objectDefinition:
+#                apiVersion: operators.coreos.com/#v1alpha1
+#                kind: Subscription
+#                metadata:
+#                  name: Gatekeeper
+#                  namespace: openshift-operators
+#                spec:
+#                  channel: stable
+#                  installPlanApproval: Automatic
+#                  name: gatekeeper-operator-product
+#                  source: redhat-operators
+#                  sourceNamespace: openshift-marketplace
+#---
 apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
   name: gatekeeper-config
-  annotations:
-    policy.open-cluster-management.io/standards: NIST SP 800-53
-    policy.open-cluster-management.io/categories: CM Configuration Management
-    policy.open-cluster-management.io/controls: CM-2 Baseline Configuration
 spec:
   remediationAction: enforce
   disabled: false
@@ -18,8 +41,6 @@ spec:
         metadata:
           name: gatekeeper-config
         spec:
-          remediationAction: enforce # will be overridden by remediationAction in parent policy
-          severity: low
           object-templates:
             - complianceType: mustonlyhave
               objectDefinition:
