--- a/acm/policies/must-gather-service-account/must-gather-sa-placement-binding.yaml
+++ b/acm/policies/must-gather-service-account/must-gather-sa-placement-binding.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     policy: must-gather
 placementRef:
-  name: dev-clusters
+  name: hub-cluster
   kind: PlacementRule
   apiGroup: apps.open-cluster-management.io
 subjects:
@@ -20,7 +20,7 @@ metadata:
   labels:
     policy: must-gather
 placementRef:
-  name: dev-clusters
+  name: hub-cluster
   kind: PlacementRule
   apiGroup: apps.open-cluster-management.io
 subjects:
