--- a/acm/policies/pipelines/pipelines-policy.yaml
+++ b/acm/policies/pipelines/pipelines-policy.yaml
@@ -2,6 +2,7 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
   name: pipelines-operator
+  namespace: rhacm-policies
 spec:
   remediationAction: enforce
   disabled: false
@@ -11,6 +12,7 @@ spec:
       kind: ConfigurationPolicy
       metadata:
         name: pipelines-operator
+        namespace: rhacm-policies
       spec:
         object-templates:
         - complianceType: musthave
