--- a/acm/gatekeeper/gatekeeper-config-policy.yaml
+++ b/acm/gatekeeper/gatekeeper-config-policy.yaml
@@ -1,36 +1,39 @@
-#apiVersion: policy.open-cluster-management.io/v1
-#kind: Policy
-#metadata:
-#  name: gatekeeper-policy
-#spec:
-#  remediationAction: enforce
-#  disabled: false
-#  policy-templates:
-#    - objectDefinition:
-#        apiVersion: policy.open-cluster-management.io/v1
-#        kind: ConfigurationPolicy
-#        metadata:
-#          name: gatekeeper-operator
-#        spec:
-#          object-templates:
-#            - complianceType: mustonlyhave
-#              objectDefinition:
-#                apiVersion: operators.coreos.com/#v1alpha1
-#                kind: Subscription
-#                metadata:
-#                  name: Gatekeeper
-#                  namespace: openshift-operators
-#                spec:
-#                  channel: stable
-#                  installPlanApproval: Automatic
-#                  name: gatekeeper-operator-product
-#                  source: redhat-operators
-#                  sourceNamespace: openshift-marketplace
-#---
+apiVersion: policy.open-cluster-management.io/v1
+kind: Policy
+metadata:
+  name: gatekeeper-policy
+  namespace: rhacm-policies
+spec:
+  remediationAction: enforce
+  disabled: false
+  policy-templates:
+    - objectDefinition:
+        apiVersion: policy.open-cluster-management.io/v1
+        kind: ConfigurationPolicy
+        metadata:
+          name: gatekeeper-operator
+          namespace: rhacm-policies
+        spec:
+          object-templates:
+            - complianceType: mustonlyhave
+              objectDefinition:
+                apiVersion: operators.coreos.com/v1alpha1
+                kind: Subscription
+                metadata:
+                  name: gatekeeper
+                  namespace: openshift-operators
+                spec:
+                  channel: stable
+                  installPlanApproval: Automatic
+                  name: gatekeeper-operator-product
+                  source: redhat-operators
+                  sourceNamespace: openshift-marketplace
+---
 apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
   name: gatekeeper-config
+  namespace: rhacm-policies
 spec:
   remediationAction: enforce
   disabled: false
@@ -40,6 +43,7 @@ spec:
         kind: ConfigurationPolicy
         metadata:
           name: gatekeeper-config
+          namespace: rhacm-policies
         spec:
           object-templates:
             - complianceType: mustonlyhave
@@ -65,6 +69,8 @@ spec:
                           - multicluster-*
                           - rhacs-*
                           - stackrox
+                          - cluster-*
+                          - cert-manager*
                         processes:
                           - '*'
                   validatingWebhook: Enabled
