--- a/acm/policies/common/placement-rule.yaml
+++ b/acm/policies/common/placement-rule.yaml
@@ -1,16 +1,31 @@
 apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
-  name: dev-clusters
-  labels:
-    policy: limit-range
+  name: openshift-clusters
+  namespace: rhacm-policies
 spec:
   clusterConditions:
   - type: ManagedClusterConditionAvailable
     status: "True"
   clusterSelector:
     matchExpressions:
-      - key: environment
+      - key: vendor
         operator: In
         values:
-        - "dev"
+        - "OpenShift"
+---
+apiVersion: apps.open-cluster-management.io/v1
+kind: PlacementRule
+metadata:
+  name: hub-cluster
+  namespace: rhacm-policies
+spec:
+  clusterConditions:
+  - type: ManagedClusterConditionAvailable
+    status: "True"
+  clusterSelector:
+    matchExpressions:
+      - key: local-cluster
+        operator: In
+        values:
+        - "true"
