--- a/acm/policies/gitops/kustomization.yaml
+++ b/acm/policies/gitops/kustomization.yaml
@@ -1,5 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
-- namespace.yaml
-- placement-rule.yaml
+- ../common/
+
+- gitops-policy.yaml
+- gitops-binding.yaml
