--- a/acm/policies/must-gather-service-account/kustomization.yaml
+++ b/acm/policies/must-gather-service-account/kustomization.yaml
@@ -2,10 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- must-gather-sa-placement-rule.yaml
+- ../common/
 - must-gather-sa-placement-binding.yaml
-- must-gather-sa-policy.yaml
-- must-gather-namespace.yaml
+- must-gather-policy.yaml
 patches:
 - patch: |-
     - op: add
