--- a/acm/policies/must-gather-service-account/must-gather-sa-placement-binding.yaml
+++ b/acm/policies/must-gather-service-account/must-gather-sa-placement-binding.yaml
@@ -2,6 +2,7 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
   name: binding-policy-must-gather
+  namespace: rhacm-policies
   labels:
     policy: must-gather
 placementRef:
@@ -15,6 +16,7 @@ subjects:
 ---
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
+namespace: rhacm-policies
 metadata:
   name: binding-policy-must-gather-namespace
   labels:
