--- a/acm/policies/no-go-image/kustomization.yaml
+++ b/acm/policies/no-go-image/kustomization.yaml
@@ -1,5 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
-- namespace.yaml
-- placement-rule.yaml
+- ../common/
+
+- no-go-policy.yaml
+- no-go-placement-binding.yaml
