--- a/acm/policies/no-go-image/no-go-placement-binding.yaml
+++ b/acm/policies/no-go-image/no-go-placement-binding.yaml
@@ -2,10 +2,9 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
   name: binding-policy-no-go
-  labels:
-    policy: no-go-image
+  namespace: rhacm-policies
 placementRef:
-  name: dev-clusters
+  name: openshift-clusters
   kind: PlacementRule
   apiGroup: apps.open-cluster-management.io
 subjects:
