--- a/acm/policies/pipelines/pipelines-binding.yaml
+++ b/acm/policies/pipelines/pipelines-binding.yaml
@@ -2,8 +2,9 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
   name: pipelines-binding
+  namespace: rhacm-policies
 placementRef:
-  name: openshift-clusters-pipelines
+  name: openshift-clusters
   kind: PlacementRule
   apiGroup: apps.open-cluster-management.io
 subjects:
