--- a/acm/policies/web-terminal/kustomization.yaml
+++ b/acm/policies/web-terminal/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- ../common/
 - web-terminal-policy.yaml
 - web-terminal-placement-binding.yaml
-- placement-rule.yaml
 patches:
 - patch: |-
     - op: add
