--- a/policies/load-balancer-annotation/lb-annotation-placement-binding.yaml
+++ b/policies/load-balancer-annotation/lb-annotation-placement-binding.yaml
@@ -2,8 +2,9 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
   name: binding-policy-load-balancer-annotation
+  namespace: rhacm-policies
 placementRef:
-  name: dev-clusters
+  name: openshift-clusters
   kind: PlacementRule
   apiGroup: apps.open-cluster-management.io
 subjects:
